# portfolio

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.yml
.github/workflows/: frontend-ci.yml
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/core/: database.py  logging_config.py  middleware.py
backend/app/routers/: health.py
backend/dto/: userDto.py
backend/tests/: test_health.py
frontend/: AGENTS.md  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/users/: page.tsx
frontend/components/: Navbar.tsx  UserList.tsx
kubernetes/frontend/: configmap.yaml  deploiement.yaml  ingress.yaml  service.yaml
